# LovelaceEngine

./: .gitignore  CMakeLists.txt  README.md
examples/sponza/: main.cpp
include/glad/: glad.h
include/stb/: stb_image.h
models/sponza/: LICENSE
shaders/: basic.glsl  basic_color.frag  basic_color.glsl  basic_color.vert  basic_color_interpolated.frag  basic_color_interpolated.glsl  basic_color_interpolated.vert  basic_texture.frag  basic_texture.glsl  basic_texture.vert  basic_texture_interpolated.frag  basic_texture_interpolated.glsl  basic_texture_interpolated.vert  gouraud.glsl  gouraud.vert  phong.frag  phong.glsl  phong.vert  phong_textured.frag  phong_textured.glsl  phong_textured.vert
src/: config.h  config.h.in  error.h  fpscamera.cpp  fpscamera.h  glbuffer.h  gldebug.h  glmaterial.cpp  glmaterial.h  glmesh.cpp  glmesh.h  glmodel.cpp  glmodel.h  glprogram.cpp  glprogram.h  glshader.cpp  glshader.h  glshader_loader.cpp  glshader_loader.h  gltexture2D.cpp  gltexture2D.h  gltexture_loader.cpp  gltexture_loader.h  glutils.h  glvao.h  io.h  lights.h  log.h
